Add dropdown to categories

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <title>Frontend Online Store</title>
   </head>
-  <body>
+  <body class="bg-light">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
